--- a/landing/templates/landing/detalle_jugadora.html
+++ b/landing/templates/landing/detalle_jugadora.html
@@ -9,15 +9,15 @@
   <div class="cover"></div>
   <div class="container">
     <div class="image-column">
-      {% if jugadora.Imagen %}
-        <img src={{jugadora.Imagen.url}} alt="{{jugadora.nombre}} imagen" class="circle"/>
+      {% if jugadora.imagen %}
+        <img src={{jugadora.imagen.url}} alt="{{jugadora.nombre}} imagen" class="circle"/>
       {% else %}
         <img src="{% static 'static_media/default.jpg' %}" alt="{{jugadora.nombre}} imagen" class="circle"/>
       {% endif %}
     </div>
     <div class="info-column">
       <h2>{{ jugadora.nombre }} {{ jugadora.apellido }}</h2>
-      <h6><strong>Posición: </strong>{{jugadora.get_Posicion_display}}</h6>
+      <h6><strong>Posición: </strong>{{jugadora.get_posicion_display}}</h6>
       <h6><strong>Edad: </strong>{{edad}} años</h6>
       <h6><strong>Número: </strong>{{jugadora.numero}}</h6>
       <h6><strong>Equipo: </strong>{{equipo.nombre}}</h6>
@@ -80,7 +80,7 @@
     </div>
     <div class="card">
       <span class="card-title"><strong>COMENTARIOS DEL COACH</strong></span>
-      <p>{{jugadora.Comentarios}}</p>
+      <p>{{jugadora.comentarios}}</p>
     </div>
   </div>
 </div>
