--- a/landing/templates/landing/main.html
+++ b/landing/templates/landing/main.html
@@ -60,7 +60,7 @@
        <div class="container">
          <img class="icon vision" src="{% static 'static_media/star.svg' %}" alt="vision-icon" />
          <h4>Visión</h4>
-         <p>Formar niñas y/o jovencitas que generen acciones trascendentes en el desarrollo social y/o deportivo, la confianza en sí misma, el valor de la palabra, el compromiso, la honestidad y la ayuda al prójimo</p>
+         <p>Formar niñas y/o jovencitas que generen acciones trascendentes en el desarrollo social y/o deportivo, la confianza en sí misma, el valor de la palabra, el compromiso, la honestidad y la ayuda al prójimo.</p>
        </div>
      </div>
    </div>
