--- a/landing/templates/landing/partido.html
+++ b/landing/templates/landing/partido.html
@@ -17,7 +17,7 @@
     </div>
     <div class="torneo">
       <h5>Torneo {{torneo.nombre}}</h5>
-      <p>Jornada {{partido.jornada_id}}</p>
+      <p>Jornada {{partido.jornada_jornada}}</p>
       <p>{{partido.fecha}} {{partido.hora}}</p>
     </div>
     <div class="team row">
